--- a/html/index.html
+++ b/html/index.html
@@ -4,19 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 
   <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
 
-  Improve your front-end skills by building projects
+<div class="card">
+  <img class="card-img">
+  <div class="card-title card-text">
+    Improve your front-end skills by building projects
+  </div>
+  <div class="card-content card-text">
+    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  </div>
+</div>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
