--- a/html/index.html
+++ b/html/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
 
-  <link rel="stylesheet" href="../css/index.css">
+    <title>Frontend Mentor | QR code component</title>
+
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
+<div class="page-wrapper">
+    <div class="card-wrapper">
+        <div class="card">
+            <img class="card-img" src="../images/image-qr-code.png">
+            <div class="card-text-wrapper">
+                <div class="card-title card-text">
+                    Improve your front-end skills by building projects
+                </div>
+                <div class="card-content card-text">
+                    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+                </div>
+            </div>
+        </div>
+    </div>
 
-<div class="card">
-  <img class="card-img">
-  <div class="card-title card-text">
-    Improve your front-end skills by building projects
-  </div>
-  <div class="card-content card-text">
-    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  </div>
+
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://github.com/Pfirewire" target="_blank">Pfirewire</a>.
+    </div>
 </div>
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
