--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,11 @@
 
     <title>Frontend Mentor | QR code component</title>
 
+<!--    Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
