--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
     <title>Frontend Mentor | QR code component</title>
 
@@ -14,13 +14,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 <div class="page-wrapper">
     <div class="card-wrapper">
         <div class="card">
-            <img class="card-img" src="../images/image-qr-code.png">
+            <img class="card-img" src="images/image-qr-code.png">
             <div class="card-text-wrapper">
                 <div class="card-title card-text">
                     Improve your front-end skills by building projects
